contact info update

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -332,7 +332,7 @@
         <h1><strong>Contact Us</strong></h1>
         <h3>Have questions, comments or concerns? Just want to get more emails? If so, just fill out this form below!</h3>
         <button type="button" class="btn btn-light">
-          <a target="_blank" href="https://forms.gle/p3k1fUnAYFs2rMwM9"><strong>Contact Us</strong></a>
+          <a target="_blank" href="mailto:patience.gifford23@trinityschoolnyc.org"><strong>Contact Us</strong></a>
         </button>
 
       </aside>
@@ -345,7 +345,7 @@
     padding-left: auto;
     padding-right: auto;
 ">
-        <center><h1 class="my-4"> <strong>HackTrin X Team</strong></h1></center>
+        <center><h1 class="my-4"> <strong>HackTrin X Leadership</strong></h1></center>
       </div>
 
       <div class="row" style="
