sign up form and minor style changes

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -36,7 +36,8 @@
 
 <body>
   <button type="button" id="sign-up" class="btn btn-light  btn-lg hide-on-firefox">
-    <a target="_blank" class="d">Sign Up!</a>
+
+    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdgl1qzC0CHfPzJXIbExHoSUcAT7vp3MpZFkTOdT0R-ZQ_MVg/viewform?usp=sf_link" class="d">Sign Up!</a>
   </button>
 
 
@@ -106,7 +107,7 @@
       <h3>Trinity School's annual hackathon</h3>
       <h3>Come spend January 29th coding with us!</h3>
 
-      <a target="_blank" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
+      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdgl1qzC0CHfPzJXIbExHoSUcAT7vp3MpZFkTOdT0R-ZQ_MVg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
 <div id="content-desktop">
     <div id="c1">
@@ -291,12 +292,6 @@
               <br>
               <h3><strong>Who can come to HackTrin?</strong></h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
-              <br>
-              <h3><strong>How will HackTrin run during COVID?</strong></h3>
-              <em><h3>HackTrin will run this year with a hybrid model. Fully vaccinated participants are encouraged to come in person at Trinity school! We will also be offering a virtual option on Discord. All virtual individuals must have a Discord account and the link to the server will be sent out prior to the event.</h3></em>
-              <br>
-              <h3><strong>What is Discord?</strong></h3>
-              <em><h3>Discord is the platform that virtual HackTrin will be run through this year. Discord is a voice/video/text platform and easily facilitates team events. To create a Discord account click <a <u style="color:white" href="https://discord.com/register">here</a></u>.</h3></em>
             </div>
           </aside>
         </section>
@@ -308,15 +303,25 @@
           <div class="container text-center">
             <h1><strong>Awards</strong></h1>
             <br>
-            <h3><b>Best Middle School </b> <em> -- The middle school project that stands out overall</em></h3>
+            <h3><b>Best Middle School </b>
             <br>
-            <h3><b>Best Design </b> <em> -- The project that has the best construction and implementation</em></h3>
+            <em>The middle school project that stands out overall</em></h3>
             <br>
-            <h3><b>Best Overall </b> <em> -- The project that excels in every category</em></h3>
+            <h3><b>Best Design </b>
             <br>
-            <h3><b>Best Use of the Theme </b> <em> -- The project that creatively and effectively uses the theme</em></h3>
+            <em>The project that has the best construction and implementation</em></h3>
             <br>
-            <h3><b>Judges' Choice </b> <em> -- The project that the judges think is especially inventive, holds a lot of promise, or stands out in ways different from the other categories</em></h3>
+            <h3><b>Best Overall </b>
+            <br>
+            <em>The project that excels in every category</em></h3>
+            <br>
+            <h3><b>Best Use of the Theme </b>
+            <br>
+            <em>The project that creatively and effectively uses the theme</em></h3>
+            <br>
+            <h3><b>Judges' Choice </b>
+            <br>
+            <em>The project that the judges think is especially inventive, holds a lot of promise, or stands out in ways different from the other categories</em></h3>
 
 
       <br>
@@ -352,7 +357,7 @@
     margin-right: auto;
     margin-left: auto;
     padding-left: 0px;
-    width: 800px;
+    width: 1000px;
 ">
         <div class="flexBox" style="
         display: flex;
@@ -375,10 +380,10 @@
 <div class="flexBox" style="
 display: flex;
 width: auto;
-margin-left: -65px;
+margin-left: -140px;
 margin-right: auto;
 ">
-<div class="col-5 text-center">
+<div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
   <h3>Becca Jekogian '23
     <br>
@@ -386,7 +391,7 @@ margin-right: auto;
   </h3>
 </div>
 
-<div class="col-5 text-center">
+<div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.jpeg" alt="">
   <h3>Nathaniel Shalam '25
     <br>
@@ -394,11 +399,19 @@ margin-right: auto;
   </h3>
 </div>
 
-<div class="col-5 text-center">
+<div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
   <h3>Nancy Chen '23
     <br>
     <small>Art and Design</small>
+  </h3>
+</div>
+
+<div class="col-4 text-center">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Ian-kopke.jpeg" alt="">
+  <h3>Ian Kopke '23
+    <br>
+    <small>Workshops</small>
   </h3>
 </div>
 
@@ -415,31 +428,47 @@ margin-right: auto;
   padding-left: 0px;
   padding-right: 0px;
 ">
-      <center><h1 class="my-4"><strong>HackTrin X Team</strong></h1></center>
+      <center><h1 class="my-4"><strong>HackTrin X Leadership</strong></h1></center>
     </div>
 
 <center>
       <div class="col-9 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lux.jpg" alt="">
-        <h3>Lux Hogan-Murphy '22
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lake.png" alt="">
+        <h3>Lake Gifford '23'
           <br>
-          <small>Co-President</small>
+          <small>President</small>
         </h3>
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/elizabeth.jpg" alt="">
-        <h3>Elizabeth Ting '22
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
+        <h3>Becca Jekogian '23
           <br>
-          <small>Co-President</small>
+          <small>Outreach</small>
         </h3>
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
-        <h3>Lake Gifford '23
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nathaniel-shalam.jpeg" alt="">
+        <h3>Nathaniel Shalam '25
           <br>
-          <small>Co-President</small>
+          <small>Publicity</small>
+        </h3>
+      </div>
+
+      <div class="col-8 text-center mb-5">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
+        <h3>Nancy Chen '23
+          <br>
+          <small>Art and Design</small>
+        </h3>
+      </div>
+
+      <div class="col-8 text-center mb-5">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ian-kopke.jpg" alt="">
+        <h3>Ian Kopke
+          <br>
+          <small>Art and Design</small>
         </h3>
       </div>
 </center>
