--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -408,7 +408,7 @@ margin-right: auto;
 </div>
 
 <div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Ian-kopke.jpeg" alt="">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Ian-kopke.jpg" alt="">
   <h3>Ian Kopke '23
     <br>
     <small>Workshops</small>
