--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="HackTrin X is the tenth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
-  to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building).
+  to help you with your projects and learn! This years theme is adventure! Participants may start planning their project ahead of the event date (but not coding or building).
    Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
@@ -265,7 +265,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced shortly before the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! This year's theme is adventure! Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -288,7 +288,7 @@
               <em><h3>Anything you want, as long as it involves some coding component and relates to the theme.  Popular projects in the past have included websites, apps, games, gagdets, or whatever else you come up with!</h3></em>
               <br/>
               <h3><strong>Is there a theme at HackTrin?</strong></h3>
-              <em><h3>The theme will be announced shortly before the event.</h3></em>
+              <em><h3>This years theme is adventure!</h3></em>
               <br>
               <h3><strong>Who can come to HackTrin?</strong></h3>
               <em><h3>HackTrin is open to any current high school or middle school student.</h3></em>
