--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -575,7 +575,7 @@ margin-right: auto;
               <strong>HackTrin</strong>
             </h4>
             <p>Trinity School
-              <br>115 W 91st St <br> New York, NY 10024 </p>
+              <br>115 West 91st St <br> New York, NY 10024 </p>
               <ul class="list-unstyled">
 
 
