Leadership Update + "Hacktrin X" --> "Hacktrin XI"

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -6,14 +6,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HackTrin X is the tenth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
+  <meta name="description" content="HackTrin XI is the eleventh iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
   to help you with your projects and learn! This years theme is adventure! Participants may start planning their project ahead of the event date (but not coding or building).
    Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
 
-  <title>HackTrin X</title>
+  <title>HackTrin XI</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
@@ -101,7 +101,7 @@
       <br>
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
-      <h1>HackTrin X</h1>
+      <h1>HackTrin XI</h1>
       <h2> January 29th, 2023</h2>
       <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
@@ -114,7 +114,7 @@
         <style>
           #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin X</div>
+        <div>Countdown to HackTrin XI</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
 </div>
@@ -124,7 +124,7 @@
         <style>
           #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin X</div>
+        <div>Countdown to HackTrin XI</div>
 <script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
     </div>
 </div>
@@ -265,7 +265,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin X is the tenth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! This year's theme is adventure! Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin XI is the eleventh iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! This year's theme is adventure! Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on January 29th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -337,7 +337,7 @@
         <h1><strong>Contact Us</strong></h1>
         <h3>Have questions, comments or concerns? Just want to get more emails? If so, just fill out this form below!</h3>
         <button type="button" class="btn btn-light">
-          <a target="_blank" href="mailto:patience.gifford23@trinityschoolnyc.org"><strong>Contact Us</strong></a>
+          <a target="_blank" href="mailto:Nathaniel.shalam25@trinityschoolnyc.org"><strong>Contact Us</strong></a>
         </button>
 
       </aside>
@@ -350,7 +350,7 @@
     padding-left: auto;
     padding-right: auto;
 ">
-        <center><h1 class="my-4"> <strong>HackTrin X Leadership</strong></h1></center>
+        <center><h1 class="my-4"> <strong>HackTrin XI Leadership</strong></h1></center>
       </div>
 
       <div class="row" style="
@@ -361,59 +361,50 @@
 ">
         <div class="flexBox" style="
         display: flex;
-        width: auto;
         margin-left: auto;
         margin-right: auto;
         ">
 
-        <div class="col-5 text-center ml-12">
-          <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/lake.png" alt="">
-          <h3 style="width: 182px;">Lake Gifford '23
+        <div class=" text-center">
+          <img class="rounded-circle" style="width:180px; height:180px;"src="img/team/Nathaniel.jpeg" alt="">
+          <h3 style="width: 350px;">Nathaniel Shalam '25
             <br>
             <small>President</small>
           </h3>
         </div>
-
 
       </div>
 
 <div class="flexBox" style="
 display: flex;
 width: auto;
-margin-left: -140px;
+margin-left: auto;
 margin-right: auto;
 ">
 <div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
-  <h3>Becca Jekogian '23
-    <br>
-    <small>Outreach</small>
-  </h3>
-</div>
-
-<div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel-shalam.jpeg" alt="">
-  <h3>Nathaniel Shalam '25
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
+  <h3 style="width: 240px;">Maddie Magliaro '25
     <br>
     <small>Publicity</small>
   </h3>
 </div>
 
 <div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
-  <h3>Nancy Chen '23
-    <br>
-    <small>Art and Design</small>
-  </h3>
-</div>
-
-<div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Ian-kopke.jpg" alt="">
-  <h3>Ian Kopke '23
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Manas.jpeg" alt="">
+  <h3>Manas Ramesh '24
     <br>
     <small>Workshops</small>
   </h3>
 </div>
+
+<div class="col-4 text-center">
+  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
+  <h3 style="width: 240px;">Stephanie Wang '26
+    <br>
+    <small>Outreach</small>
+  </h3>
+</div>
+
 
 </div>
 
@@ -428,47 +419,39 @@ margin-right: auto;
   padding-left: 0px;
   padding-right: 0px;
 ">
-      <center><h1 class="my-4"><strong>HackTrin X Leadership</strong></h1></center>
+      <center><h1 class="my-4"><strong>HackTrin XI Leadership</strong></h1></center>
     </div>
 
 <center>
       <div class="col-9 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/lake.png" alt="">
-        <h3>Lake Gifford '23'
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel.jpeg" alt="">
+        <h3>Nathaniel Shalam '25
           <br>
           <small>President</small>
         </h3>
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Becca-Jekogian.jpg" alt="">
-        <h3>Becca Jekogian '23
-          <br>
-          <small>Outreach</small>
-        </h3>
-      </div>
-
-      <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nathaniel-shalam.jpeg" alt="">
-        <h3>Nathaniel Shalam '25
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/maddie.jpeg" alt="">
+        <h3>Maddie Magliaro '25
           <br>
           <small>Publicity</small>
         </h3>
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Nancy-Chen.jpg" alt="">
-        <h3>Nancy Chen '23
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Manas.jpeg" alt="">
+        <h3>Manas Ramesh '24
           <br>
-          <small>Art and Design</small>
+          <small>Workshops</small>
         </h3>
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Ian-kopke.jpg" alt="">
-        <h3>Ian Kopke
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
+        <h3>Stephanie Wang '26
           <br>
-          <small>Art and Design</small>
+          <small>Outreach</small>
         </h3>
       </div>
 </center>
@@ -575,7 +558,7 @@ margin-right: auto;
               <strong>HackTrin</strong>
             </h4>
             <p>Trinity School
-              <br>115 W 91st St <br> New York, NY 10024 </p>
+              <br>115 West 91st St <br> New York, NY 10024 </p>
               <ul class="list-unstyled">
 
 
