--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -432,7 +432,7 @@ margin-right: auto;
       </div>
 
       <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/maddie.jpeg" alt="">
+        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
         <h3>Maddie Magliaro '25
           <br>
           <small>Publicity</small>
