--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -11,7 +11,7 @@
   to help you with your projects and learn! The theme will be announced one week prior to the event. Participants may start planning their project ahead of the event date (but not coding or building).
    Coding and building starts on Febuary 24th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
-  <meta property="og:image" content="http://hacktrin.com/img/logocolor.svg" />
+  <meta property="og:image" content="http://hacktrin.com/img/logocolor.png" />
 
   <title>HackTrin XI</title>
 
@@ -101,7 +101,7 @@
     <div class="head-text">
       <br>
 
-      <img class="d-block mx-auto img-logo" src="img/logocolor.svg" alt="">
+      <img class="d-block mx-auto img-logo" src="img/logocolor.png" alt="">
       <h1>HackTrin XI</h1>
       <h2> Febuary 24th, 2024</h2>
       <h2>9:00am - 5:00pm</h2>
