--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -368,7 +368,7 @@
 
         <div class=" text-center">
           <img class="rounded-circle" style="width:180px; height:180px;"src="img/team/Nathaniel.jpeg" alt="">
-          <h3 style="width: 350px;">Nathaniel Shalam '25
+          <h3 style="width: 350px;">Nathaniel S. '25
             <br>
             <small>President</small>
           </h3>
@@ -384,7 +384,7 @@ margin-right: auto;
 ">
 <div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
-  <h3 style="width: 240px;">Maddie Magliaro '25
+  <h3 style="width: 240px;">Maddie M. '25
     <br>
     <small>Publicity</small>
   </h3>
@@ -392,7 +392,7 @@ margin-right: auto;
 
 <div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Manas.jpeg" alt="">
-  <h3>Manas Ramesh '24
+  <h3>Manas R. '24
     <br>
     <small>Workshops</small>
   </h3>
@@ -400,7 +400,7 @@ margin-right: auto;
 
 <div class="col-4 text-center">
   <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
-  <h3 style="width: 240px;">Stephanie Wang '26
+  <h3 style="width: 240px;">Stephanie W. '26
     <br>
     <small>Outreach</small>
   </h3>
@@ -426,7 +426,7 @@ margin-right: auto;
 <center>
       <div class="col-9 text-center mb-5">
         <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel.jpeg" alt="">
-        <h3>Nathaniel Shalam '25
+        <h3>Nathaniel S. '25
           <br>
           <small>President</small>
         </h3>
@@ -434,7 +434,7 @@ margin-right: auto;
 
       <div class="col-8 text-center mb-5">
         <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
-        <h3>Maddie Magliaro '25
+        <h3>Maddie M. '25
           <br>
           <small>Publicity</small>
         </h3>
@@ -442,7 +442,7 @@ margin-right: auto;
 
       <div class="col-8 text-center mb-5">
         <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Manas.jpeg" alt="">
-        <h3>Manas Ramesh '24
+        <h3>Manas R. '24
           <br>
           <small>Workshops</small>
         </h3>
@@ -450,7 +450,7 @@ margin-right: auto;
 
       <div class="col-8 text-center mb-5">
         <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
-        <h3>Stephanie Wang '26
+        <h3>Stephanie W. '26
           <br>
           <small>Outreach</small>
         </h3>
