date and team update for '25

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -6,14 +6,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="HackTrin XI is the eleventh iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
+  <meta name="description" content="HackTrin XII is the twelfth iteration of Trinity School’s annual hackathon. Middle and high schoolers, of any experience level,
   can participate. You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding. We'll have workshops and mentors
   to help you with your projects and learn! The theme will be announced one week prior to the event. Participants may start planning their project ahead of the event date (but not coding or building).
-   Coding and building starts on Febuary 24th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
+   Coding and building starts on Febuary 22nd. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!">
   <meta name="author" content="">
   <meta property="og:image" content="http://hacktrin.com/img/logocolor.png" />
 
-  <title>HackTrin XI</title>
+  <title>HackTrin XII</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
@@ -102,11 +102,11 @@
       <br>
 
       <img class="d-block mx-auto img-logo" src="img/logocolor.png" alt="">
-      <h1>HackTrin XI</h1>
-      <h2> Febuary 24th, 2024</h2>
+      <h1>HackTrin XII</h1>
+      <h2> Febuary 22nd, 2025</h2>
       <h2>9:00am - 5:00pm</h2>
       <h3>Trinity School's annual hackathon</h3>
-      <h3>Come spend Febuary 24th coding with us!</h3>
+      <h3>Come spend Febuary 22nd coding with us!</h3>
 
       <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdgl1qzC0CHfPzJXIbExHoSUcAT7vp3MpZFkTOdT0R-ZQ_MVg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
@@ -115,7 +115,7 @@
         <style>
           #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin XI</div>
+        <div>Countdown to HackTrin XII</div>
         <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
     </div>
 </div>
@@ -125,7 +125,7 @@
         <style>
           #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
-        <div>Countdown to HackTrin XI</div>
+        <div>Countdown to HackTrin XII</div>
 <script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="row">
       <div class="col-lg-10 mx-auto text-center">
         <h1><strong>About HackTrin</strong></h1>
-        <h3>HackTrin XI is the eleventh iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced one week prior to the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on Febuary 24th. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
+        <h3>HackTrin XII is the twelfth iteration of Trinity School’s annual hackathon.  Middle and high schoolers, of any experience level, can participate.  You can form teams of 1-4 students, even across different schools, and work to make projects relating to coding.  We'll have workshops and mentors to help you with your projects and learn! The theme will be announced one week prior to the event. Participants may start planning their project ahead of the event date (but not coding or building). Coding and building starts on Febuary 22nd. You’ll present your projects to our panels of judges to win prizes in multiple categories (including a beginner category)!
           <br /><br />
 
           </div>
@@ -344,122 +344,96 @@
       </aside>
     </div>
   </section>
-    <section id="team" class="team">
-  <div id="content-desktop">
-  <div class="container" style="margin-right: auto;margin-left: auto;padding-right: auto;padding-left: auto;">
-      <div class="col-lg-12" style="
-    padding-left: auto;
-    padding-right: auto;
-">
-        <center><h1 class="my-4"> <strong>HackTrin XI Leadership</strong></h1></center>
-      </div>
-
-      <div class="row" style="
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0px;
-    width: 1000px;
-">
-        <div class="flexBox" style="
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
-        ">
-
-        <div class=" text-center">
-          <img class="rounded-circle" style="width:180px; height:180px;"src="img/team/Nathaniel.jpeg" alt="">
-          <h3 style="width: 350px;">Nathaniel S. '25
-            <br>
-            <small>President</small>
-          </h3>
+  <section id="team" class="team">
+    <div id="content-desktop">
+      <div class="container" style="margin-right: auto; margin-left: auto; padding-right: auto; padding-left: auto;">
+        <div class="col-lg-12" style="padding-left: auto; padding-right: auto;">
+          <center><h1 class="my-4"><strong>HackTrin XII Leadership</strong></h1></center>
         </div>
 
+        <div class="row justify-content-center" style="margin-right: auto; margin-left: auto; padding-left: 0px; width: 50%;">
+          <!-- First row -->
+          <div class="col-md-6 text-center mb-4">
+            <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt="">
+            <h3>Nathaniel S. '25
+              <br>
+              <small>Co-President</small>
+            </h3>
+          </div>
+
+          <div class="col-md-6 text-center mb-4">
+            <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt="">
+            <h3>Maddie M. '25
+              <br>
+              <small>Co-President</small>
+            </h3>
+          </div>
+
+          <!-- Second row -->
+          <div class="col-md-6 text-center mb-4">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt="">
+            <h3>Daniel I. '26
+              <br>
+              <small>Education</small>
+            </h3>
+          </div>
+
+          <div class="col-md-6 text-center mb-4">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt="">
+            <h3>Stephanie W. '26
+              <br>
+              <small>Guest Operations</small>
+            </h3>
+          </div>
+        </div>
       </div>
-
-<div class="flexBox" style="
-display: flex;
-width: auto;
-margin-left: auto;
-margin-right: auto;
-">
-<div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
-  <h3 style="width: 240px;">Maddie M. '25
-    <br>
-    <small>Publicity</small>
-  </h3>
-</div>
-
-<div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Manas.jpeg" alt="">
-  <h3>Manas R. '24
-    <br>
-    <small>Workshops</small>
-  </h3>
-</div>
-
-<div class="col-4 text-center">
-  <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
-  <h3 style="width: 240px;">Stephanie W. '26
-    <br>
-    <small>Outreach</small>
-  </h3>
-</div>
-
-
-</div>
-
-  </div>
-</div>
-</div>
-</div>
-
-<div id="content-mobile">
-<div class="container" style="margin-right: 0px;margin-left: 0px;padding-right: 0px;padding-left: 0px;">
-    <div class="col-lg-12" style="
-  padding-left: 0px;
-  padding-right: 0px;
-">
-      <center><h1 class="my-4"><strong>HackTrin XI Leadership</strong></h1></center>
     </div>
+  </section>
 
-<center>
-      <div class="col-9 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;" src="img/team/Nathaniel.jpeg" alt="">
-        <h3>Nathaniel S. '25
-          <br>
-          <small>President</small>
-        </h3>
+
+    <div id="content-mobile">
+      <div class="container" style="margin-right: 0px; margin-left: 0px; padding-right: 0px; padding-left: 0px;">
+        <div class="col-lg-12" style="padding-left: 0px; padding-right: 0px;">
+          <center><h1 class="my-4"><strong>HackTrin XII Leadership</strong></h1></center>
+        </div>
+
+        <center>
+          <div class="col-9 text-center mb-5">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt="">
+            <h3>Nathaniel S. '25
+              <br>
+              <small>Co-President</small>
+            </h3>
+          </div>
+
+          <div class="col-8 text-center mb-5">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt="">
+            <h3>Maddie M. '25
+              <br>
+              <small>Co-President</small>
+            </h3>
+          </div>
+
+          <div class="col-8 text-center mb-5">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt="">
+            <h3>Daniel I. '26
+              <br>
+              <small>Workshops</small>
+            </h3>
+          </div>
+
+          <div class="col-8 text-center mb-5">
+            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt="">
+            <h3>Stephanie W. '26
+              <br>
+              <small>Outreach</small>
+            </h3>
+          </div>
+        </center>
       </div>
+    </div>
+  </section>
 
-      <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Maddie.jpeg" alt="">
-        <h3>Maddie M. '25
-          <br>
-          <small>Publicity</small>
-        </h3>
-      </div>
-
-      <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Manas.jpeg" alt="">
-        <h3>Manas R. '24
-          <br>
-          <small>Workshops</small>
-        </h3>
-      </div>
-
-      <div class="col-8 text-center mb-5">
-        <img class="rounded-circle img-responsive" style="width:180px; height:180px;"src="img/team/Stephanie.jpeg" alt="">
-        <h3>Stephanie W. '26
-          <br>
-          <small>Outreach</small>
-        </h3>
-      </div>
-</center>
-  </div>
-</div>
-
-</div>
   </section>
 <section id="mentors" class="mentors">
   <aside class="call-to-action bg-primary text-white">
