--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -116,7 +116,7 @@
           #c1 {display:block;width:950px;margin:10px auto;background-color:#137bff;border-radius:30px;padding:8px;border:13px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:30pt;color:#fff;}
         </style>
         <div>Countdown to HackTrin XII</div>
-        <script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1643324573"></script>
+<script class="d884468ddb6287619359d9fd9f8c8c79" src="https://w1.promofeatures.com/js/timer/d884468ddb6287619359d9fd9f8c8c79.js?v=1728435546" ></script>
     </div>
 </div>
 
@@ -126,7 +126,7 @@
           #c2 {display:block;width:396px;margin:31px auto;background-color:#137bff;border-radius:30px;padding:8px;border:8px solid #fc0;background-color:#137bff;font-weight:bold;white-space:nowrap;cursor:pointer;font-family:Verdana,Arial,Helvetica,serif;text-align: center;text-decoration: underline;font-size:18pt;color:#fff;}
         </style>
         <div>Countdown to HackTrin XII</div>
-<script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1643936124"></script>
+<script class="a2c45bcd512352fdc5ae7bb2ba4f0d61" src="https://w1.promofeatures.com/js/timer/a2c45bcd512352fdc5ae7bb2ba4f0d61.js?v=1728435546" ></script>
     </div>
 </div>
 
