leadership picture removal

--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -354,7 +354,7 @@
         <div class="row justify-content-center" style="margin-right: auto; margin-left: auto; padding-left: 0px; width: 50%;">
           <!-- First row -->
           <div class="col-md-6 text-center mb-4">
-            <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt="">
+            <!-- <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt=""> -->
             <h3>Nathaniel S. '25
               <br>
               <small>Co-President</small>
@@ -362,7 +362,7 @@
           </div>
 
           <div class="col-md-6 text-center mb-4">
-            <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt="">
+            <!-- <img class="rounded-circle" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt=""> -->
             <h3>Maddie M. '25
               <br>
               <small>Co-President</small>
@@ -371,7 +371,7 @@
 
           <!-- Second row -->
           <div class="col-md-6 text-center mb-4">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt="">
+            <!-- <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt=""> -->
             <h3>Daniel I. '26
               <br>
               <small>Education</small>
@@ -379,7 +379,7 @@
           </div>
 
           <div class="col-md-6 text-center mb-4">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt="">
+            <!-- <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt=""> -->
             <h3>Stephanie W. '26
               <br>
               <small>Guest Operations</small>
@@ -399,7 +399,7 @@
 
         <center>
           <div class="col-9 text-center mb-5">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt="">
+            <!-- <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Nathaniel.jpeg" alt=""> -->
             <h3>Nathaniel S. '25
               <br>
               <small>Co-President</small>
@@ -407,7 +407,7 @@
           </div>
 
           <div class="col-8 text-center mb-5">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt="">
+          <!--   <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Maddie.jpeg" alt=""> -->
             <h3>Maddie M. '25
               <br>
               <small>Co-President</small>
@@ -415,7 +415,7 @@
           </div>
 
           <div class="col-8 text-center mb-5">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt="">
+          <!--   <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Daniel.jpeg" alt=""> -->
             <h3>Daniel I. '26
               <br>
               <small>Workshops</small>
@@ -423,7 +423,7 @@
           </div>
 
           <div class="col-8 text-center mb-5">
-            <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt="">
+            <!-- <img class="rounded-circle img-responsive" style="width: 180px; height: 180px;" src="img/team/Stephanie.jpeg" alt=""> -->
             <h3>Stephanie W. '26
               <br>
               <small>Outreach</small>
