--- a/hacktrin/index.html
+++ b/hacktrin/index.html
@@ -37,7 +37,7 @@
 <body>
   <button type="button" id="sign-up" class="btn btn-light  btn-lg hide-on-firefox">
 
-    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdgl1qzC0CHfPzJXIbExHoSUcAT7vp3MpZFkTOdT0R-ZQ_MVg/viewform?usp=sf_link" class="d">Sign Up!</a>
+    <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdcRs8Ka-ZNFuxmKQRLQ5w31HHL3DK9l8ViL56vw3GVZIhhAg/viewform?usp=dialog" class="d">Sign Up!</a>
   </button>
 
 
@@ -108,7 +108,7 @@
       <h3>Trinity School's annual hackathon</h3>
       <h3>Come spend Febuary 22nd coding with us!</h3>
 
-      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdgl1qzC0CHfPzJXIbExHoSUcAT7vp3MpZFkTOdT0R-ZQ_MVg/viewform?usp=sf_link" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
+      <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdcRs8Ka-ZNFuxmKQRLQ5w31HHL3DK9l8ViL56vw3GVZIhhAg/viewform?usp=dialog" class="btn btn-dark btn-lg js-scroll-trigger">Sign Up!</a>
 
 <div id="content-desktop">
     <div id="c1">
